fix(fab-sheet): change position, to be able to be wrapped in container by page template

--- a/src/kirby/components/fab-sheet/fab-sheet.component.scss
+++ b/src/kirby/components/fab-sheet/fab-sheet.component.scss
@@ -15,7 +15,7 @@ ion-fab-button {
 }
 
 ion-fab {
-    position: fixed;
+    position: absolute;
     bottom: size('s');
     right: size('s');
 }
